auth + refactor
